# HertraFramework

./: CMakeLists.txt  README.md  main.cpp  precompile.hpp  run_debug.sh
include/: cube.hpp  depth_buffer.hpp  descriptor.hpp  graphics_pipeline.hpp  hertra.hpp  input_device.hpp  shader.hpp  swap_chain.hpp  timer.hpp  uniform_buffer.hpp  vertex.hpp  vulkan_device.hpp  window.hpp
shaders/: frag.glsl  vert.glsl
src/: cube.cpp  depth_buffer.cpp  descriptor.cpp  graphics_pipeline.cpp  hertra.cpp  input_device.cpp  shader.cpp  swap_chain.cpp  timer.cpp  uniform_buffer.cpp  vulkan_device.cpp  window.cpp
